; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-cr16.c_get_b_cc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-cr16.c_get_b_cc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cr16_num_cc = common dso_local global i32 0, align 4
@cr16_b_cond_tab = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @get_b_cc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_b_cc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [5 x i8], align 1
  store i8* %0, i8** %3, align 8
  store i32 1, i32* %4, align 4
  br label %6

6:                                                ; preds = %21, %1
  %7 = load i32, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @strlen(i8* %8)
  %10 = icmp ult i32 %7, %9
  br i1 %10, label %11, label %24

11:                                               ; preds = %6
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %12, i64 %14
  %16 = load i8, i8* %15, align 1
  %17 = load i32, i32* %4, align 4
  %18 = sub i32 %17, 1
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds [5 x i8], [5 x i8]* %5, i64 0, i64 %19
  store i8 %16, i8* %20, align 1
  br label %21

21:                                               ; preds = %11
  %22 = load i32, i32* %4, align 4
  %23 = add i32 %22, 1
  store i32 %23, i32* %4, align 4
  br label %6

24:                                               ; preds = %6
  %25 = load i32, i32* %4, align 4
  %26 = sub i32 %25, 1
  %27 = zext i32 %26 to i64
  %28 = getelementptr inbounds [5 x i8], [5 x i8]* %5, i64 0, i64 %27
  store i8 0, i8* %28, align 1
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %50, %24
  %30 = load i32, i32* %4, align 4
  %31 = load i32, i32* @cr16_num_cc, align 4
  %32 = icmp ult i32 %30, %31
  br i1 %32, label %33, label %53

33:                                               ; preds = %29
  %34 = getelementptr inbounds [5 x i8], [5 x i8]* %5, i64 0, i64 0
  %35 = load i64*, i64** @cr16_b_cond_tab, align 8
  %36 = load i32, i32* %4, align 4
  %37 = zext i32 %36 to i64
  %38 = getelementptr inbounds i64, i64* %35, i64 %37
  %39 = load i64, i64* %38, align 8
  %40 = call i64 @streq(i8* %34, i64 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %49

42:                                               ; preds = %33
  %43 = load i64*, i64** @cr16_b_cond_tab, align 8
  %44 = load i32, i32* %4, align 4
  %45 = zext i32 %44 to i64
  %46 = getelementptr inbounds i64, i64* %43, i64 %45
  %47 = load i64, i64* %46, align 8
  %48 = inttoptr i64 %47 to i8*
  store i8* %48, i8** %2, align 8
  br label %54

49:                                               ; preds = %33
  br label %50

50:                                               ; preds = %49
  %51 = load i32, i32* %4, align 4
  %52 = add i32 %51, 1
  store i32 %52, i32* %4, align 4
  br label %29

53:                                               ; preds = %29
  store i8* null, i8** %2, align 8
  br label %54

54:                                               ; preds = %53, %42
  %55 = load i8*, i8** %2, align 8
  ret i8* %55
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @streq(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
